<resources>
    <string name="app_name">Przypominajka</string>
    <string name="opis1">UPS, zapomniałeś o czymś?</string>
    <string name="opis2">Dzięki <b>Przypominajce</b> to uczucie już Cię <u>nigdy</u> nie spotka!</string>
    <string name="opis3">Aplikacja ta pomoże Ci przy natłoku informacji jakie niesie ze sobą nowoczesne społeczeństwo. Twórz swoje własne przypomnienia, a my zadbamy o to, abyś został we właściwym czasie o nich poinformowany. </string>
    <string name="imieLabelP">Imię</string>
    <string name="imieEditP">Twoje imię</string>
    <string name="nazwiskoLabelP">Nazwisko</string>
    <string name="nazwiskoEditP">Twoje nazwisko</string>
    <string name="emailLabelP">E-mail</string>
    <string name="emailEditP">E-mail</string>
    <string name="telefonLabelP">Nr. telefonu</string>
    <string name="telefonEditP">Numer</string>
    <string name="bankLabelP">Bank</string>
    <string name="numerLabelP">Numer konta</string>
    <string name="numerEditP">Numer konta</string>
    <string name="zapiszBtnP">Zapisz</string>
    <string name="tytulAddBew">Tytuł</string>
    <string name="nazwa_powiadomieniaAddNew">Nazwa powiadomienia</string>
    <string name="dataAddNew">Ustaw date</string>
    <string name="czasAddNew">Ustaw czas</string>
    <string name="przypomnijAddNew">Przypomnij</string>
    <string name="rachunkiAddNew">Rachunki</string>
    <string name="przypomnienieAddNew">Przypomnienie</string>
    <string name="iloscPowtAddNew">Ilość powtórzeń</string>
    <string name="onceAddNew">Tylko raz</string>
    <string name="dailyAddNew">Codziennie</string>
    <string name="weeklyAddNew">Co tydzień</string>
    <string name="monthlyAddNew">Co miesiąc</string>
    <string name="yearlyAddNew">Co rok</string>
    <string name="pomocHelpAdding">Pomoc</string>
    <string name="opisHelpAdding">\t Aplikacja służy do tworzenia powiadomień, które poinformują Cię o wydarzeniu, o zaprogramowanej wcześniej godzinie. \n \t W tym celu należy wpisać tytuł naszej przypominajki (wyświetli się on o zadanej porze), wybrać datę oraz czas naszego wydarzenia (to nie jest czas pokazania się powiadomienia) oraz określić w jakim odstępie czasu ukazać ma się nasza notyfikacja. Następnie wybieramy, czy tworzone powiadomienie jest zwykłym przypomnieniem, czy też odnosi się do pewnej płatności. Wypełniamy pozostałe dane. W polu Należność (zł) należy wpisać kwote liczbową rozdzieloną kropką np. 124.45 czyli 124zł 45gr. Aby zapisać naszą przypominajke należy kliknąć w przycisk plusa znajdujący się w dolnym prawym rogu ekranu.</string>
    <string name="koniecHelpAdding">Trzymamy za Ciebie kciuki, abyś już nigdy o niczym nie zapomniał!</string>
    <string name="nrKontaAddNew">Numer konta dla rachunku</string>
    <string name="billAccAddNew">Numer konta</string>
    <string name="valueBillAddNew">Należność (zł)</string>
    <string name="valBAddNew">12.99</string>
    <string name="loopsCAddNew">Ilość powtórzeń</string>
    <string name="odbiorcaAddNew">Odbiorca</string>
    <string name="nazwaOdbiorcyAddNew">Nazwa odbiorcy</string>
    <string name="dodanoTxt">Dodano</string>
    <string name="spinnerOpt1">15 minut przed</string>
    <string name="spinnerOpt2">1 godzine przed</string>
    <string name="spinnerOpt3">3 godziny przed</string>
    <string name="spinnerOpt4">6 godzin przed</string>
    <string name="spinnerOpt5">12 godzin przed</string>
    <string name="spinnerOpt6">1 dzień przed</string>
    <string name="spinnerOpt7">3 dni przed</string>
    <string name="spinnerOpt8">1 tydzień przed</string>
    <string name="clrAddNewBtn">Skasowano</string>
    <string name="correctSaveBtnAN">Zapisano</string>
    <string name="notSaveBtnAN">Błąd</string>
    <string name="dtNoticeSumm">Data i czas</string>
    <string name="appNameS">Przypominajka</string>
    <string name="witajTxtMain">Witaj</string>
    <string name="podajUserNameM">Podaj nazwę użytkownika:</string>
    <string name="userNameHintM">Nazwa użytkownika</string>
    <string name="kontynuujMain">Kontynuuj</string>
    <string name="notAllCompleteAN">Nie uzupełniono wymaganych pól</string>
    <string name="kwotaValueThisC">Kwota: \</string>
    <string name="zlValueThisC">\ zł</string>
    <string name="dataDateTimeThisC">Data: \</string>
    <string name="timeSetErrAN">Powiadomienie można dodać nie wcześniej niż 20 minut przed wydarzeniem</string>
    <string name="copyToast">Skopiowano</string>
    <string name="lastFourAccP">Ostatnie 4 cyfry numeru konta:</string>
    <string name="valueBtnP">Wartość</string>
    <string name="accBtnP">Numer</string>
    <string name="receiverBtnP">Odbiorca</string>
    <string name="copytvP">Pobierz:</string>
    <string name="accNumsToastAN">Numer konta powinien składać się z 26 cyfr</string>
    <string name="yourBanktvP">Twój bank:</string>
</resources>
