<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/profileMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity"
        android:padding="10dp"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="DisableBaselineAlignment">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imieLabelP"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/imieEditP"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:inputType="textCapWords"
            android:background="@drawable/bg_profile_fields"
            tools:ignore="Autofill" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwiskoLabelP"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/profileSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nazwiskoEditP"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:inputType="textCapWords"
        android:background="@drawable/bg_profile_fields"
        tools:ignore="Autofill" />

    </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        tools:ignore="DisableBaselineAlignment">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailLabelP"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailEditP"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_profile_fields"
            tools:ignore="Autofill" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefonLabelP"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/profilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefonEditP"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:inputType="phone"
            android:background="@drawable/bg_profile_fields"
            tools:ignore="Autofill" />

    </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bankLabelP"
            android:textStyle="bold"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/profileBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_spinner"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numerLabelP"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/profileBankAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numerEditP"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="26"
            android:background="@drawable/bg_profile_fields"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/profileSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zapiszBtnP"
        android:textStyle="bold"
        android:background="@drawable/border_save_btn"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="50dp"/>

</LinearLayout>
</ScrollView>