<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="15dp">

    <TextView
        android:id="@+id/mainOpisWitaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:text="@string/witajTxtMain"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/mainOpis1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/opis1"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/mainOpisWitaj"
        app:layout_constraintRight_toRightOf="@id/mainOpisWitaj"
        app:layout_constraintTop_toBottomOf="@id/mainOpisWitaj" />

    <TextView
        android:id="@+id/mainOpis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/opis2"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@id/mainOpis1"
        app:layout_constraintRight_toRightOf="@id/mainOpis1"
        app:layout_constraintTop_toBottomOf="@id/mainOpis1" />

    <TextView
        android:id="@+id/mainOpis3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/opis3"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/mainOpis2"
        app:layout_constraintRight_toRightOf="@id/mainOpis2"
        app:layout_constraintTop_toBottomOf="@id/mainOpis2"/>

    <TextView
        android:id="@+id/mainNazwaU1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/podajUserNameM"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/mainOpis3"
        app:layout_constraintRight_toRightOf="@id/mainOpis3"
        app:layout_constraintTop_toBottomOf="@id/mainOpis3" />

    <EditText
        android:id="@+id/mainNazwaU2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/mainNazwaU1"
        android:textAlignment="center"
        android:hint="@string/userNameHintM"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/kontynuujMain"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/mainNazwaU2"
        android:background="#D09850FF"/>

</androidx.constraintlayout.widget.ConstraintLayout>