<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillSummaryActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    tools:ignore="ScrollViewSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tytulAddBew"
            android:gravity="center"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/titleBillSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:enabled="false"
            tools:ignore="Autofill,LabelFor,TextFields" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dtNoticeSumm"
            android:gravity="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dateBillSum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:enabled="false"
                tools:ignore="Autofill,LabelFor,TextFields"/>

            <EditText
                android:id="@+id/timeBillSum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:enabled="false"
                tools:ignore="Autofill,LabelFor,TextFields"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/przypomnijAddNew"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/beforeBillSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:enabled="false"
        android:gravity="center"
        tools:ignore="Autofill,LabelFor,TextFields"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/loopsCAddNew"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/loopsBillSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:enabled="false"
        android:gravity="center"
        tools:ignore="Autofill,LabelFor,TextFields"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/odbiorcaAddNew"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/receiverBillSum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_weight="2"
            tools:ignore="Autofill,LabelFor,TextFields"/>

        <Button
            android:id="@+id/btnCopyReceiverBS"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/nrKontaAddNew"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/accountBillSum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:enabled="false"
            android:gravity="center"
            android:layout_weight="2"
            tools:ignore="Autofill,LabelFor,TextFields"/>

        <Button
            android:id="@+id/btnCopyAccBS"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/valueBillAddNew"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/valueBillSum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_weight="2"
            android:textColor="@android:color/black"
            android:gravity="center"
            tools:ignore="Autofill,LabelFor,TextFields"/>

        <Button
            android:id="@+id/btnCopyValueBS"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="30dp">

        <Button
            android:id="@+id/delBtnBSum"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/delete_ico"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/payBtnBSum"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/dollar_ico"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:layout_marginTop="-30dp">

        <ImageButton
            android:id="@+id/exportBtnBSum"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/export"
            />

    </RelativeLayout>

</LinearLayout>
</ScrollView>